--- a/resources/styles/showcase/index.scss
+++ b/resources/styles/showcase/index.scss
@@ -329,7 +329,7 @@
 	min-height: 25px;
 	text-align: center;
 	.is-active{
-		background-color: grey;
+		background-color: grey!important;
 	}
 	.splide__pagination__page{
 		background-color: grey;
