Fix slider image issue

--- a/resources/styles/showcase/showcase-common.scss
+++ b/resources/styles/showcase/showcase-common.scss
@@ -147,7 +147,7 @@
 
 // Showcase button global style.
 .splide__slide__row {
-	height: auto !important;
+	//height: auto !important; // TODO: Remove this line.
 }
 
 .wccs-category {
