--- a/resources/styles/showcase/showcase-slide.scss
+++ b/resources/styles/showcase/showcase-slide.scss
@@ -56,6 +56,9 @@
 			bottom: 0;
 			right: 0;
 			//background-color: rgba(0, 0, 0, 0.5);
+			&.has-no-image{
+				position: inherit;
+			}
 		}
 
 		// Content placement style.
