--- a/resources/styles/showcase/index.scss
+++ b/resources/styles/showcase/index.scss
@@ -206,7 +206,98 @@
 	}
 }
 
-//Navigation styles.
+// Navigation styles.
+.wccs-category{
+	&.is--navigation-top-left,
+	&.is--navigation-top-right,
+	&.is--navigation-top-center{
+		.splide__arrows{
+			position: relative;
+			display: flex;
+			gap: 10px;
+		}
+		.splide__arrow{
+			position: relative;
+			left: inherit;
+			right: inherit;
+		}
+	}
+	&.is--navigation-top-center{
+		.splide__arrows{
+			justify-content: center;
+		}
+	}
+	&.is--navigation-top-right{
+		.splide__arrows{
+			justify-content: flex-end;
+		}
+	}
+	&.is--navigation-bottom-left,
+	&.is--navigation-bottom-right,
+	&.is--navigation-bottom-center{
+		margin-bottom: 52px;
+		.splide__arrows{
+			position: absolute;
+			display: flex;
+			gap: 10px;
+			bottom: -60px;
+			width: 100%;
+		}
+		.splide__arrow{
+			position: relative;
+			left: inherit;
+			right: inherit;
+		}
+	}
+	&.is--navigation-bottom-center{
+		.splide__arrows{
+			justify-content: center;
+		}
+	}
+	&.is--navigation-bottom-right{
+		.splide__arrows{
+			justify-content: flex-end;
+		}
+	}
+	&.is--navigation-arrow{
+		.splide__arrow{
+			svg{
+				display: none;
+			}
+			&::before{
+				position: absolute;
+				content: "\2192";
+				font-size: 22px;
+			}
+			&:focus{
+				outline: none;
+			}
+		}
+		.splide__arrow--prev::before {
+			transform: scaleX(-1);
+		}
+	}
+	&.is--sharp{
+		.splide__arrow{
+			border-radius: 0;
+		}
+	}
+	&.is--rounded{
+		.splide__arrow{
+			border-radius: 5px;
+		}
+	}
+	&.is--only_icons{
+		.splide__arrow{
+			background: transparent;
+			color: inherit;
+		}
+		.splide__arrow:hover{
+			background: transparent;
+		}
+	}
+}
+
 .wcc-showcase__navigation {
 	display: flex;
 	gap: 16px;
