Fix few slider dynamic style settings

--- a/resources/styles/showcase/index.scss
+++ b/resources/styles/showcase/index.scss
@@ -296,6 +296,10 @@
 			background: transparent;
 		}
 	}
+	&.is-image-circle{
+		.wcc-showcase-slide-item{
+		}
+	}
 }
 
 .wcc-showcase__navigation {
