--- a/resources/styles/showcase/showcase-slide.scss
+++ b/resources/styles/showcase/showcase-slide.scss
@@ -50,6 +50,7 @@
 			height: 100%;
 			.wcc-showcase-slide-item__cat-thumbnails__image,
 			img{
+				width: 100%;
 				height: 100% !important;
 			}
 		}
