--- a/resources/styles/showcase/index.scss
+++ b/resources/styles/showcase/index.scss
@@ -5,7 +5,7 @@
 @import "showcase-slide";
 
 .wcc-showcase-slider{
-	margin-bottom: 1.5rem;
+	//margin-bottom: 1.5rem;
 	button:focus{
 		outline: none;
 	}
