Fixed migrations not properly working

--- a/resources/styles/showcase/index.scss
+++ b/resources/styles/showcase/index.scss
@@ -38,7 +38,6 @@
 			height: auto;
 			.slider-cat-image{
 				width: 100%;
-				height: auto;
 				border-radius: 0;
 			}
 		}
@@ -193,7 +192,7 @@
 		}
 		.slider-cat-image{
 			width: 100%;
-			height: auto;
+			//height: auto;
 		}
 		.splide__slide{
 			height:550px !important;
