Fixed some bugs

--- a/resources/styles/showcase/showcase-common.scss
+++ b/resources/styles/showcase/showcase-common.scss
@@ -28,22 +28,22 @@
 // Category body class.
 .wccs-categories{
 	h1{
-		margin-bottom: 8px;
+		margin: 8px 0;
 	}
 	h2{
-		margin-bottom: 8px;
+		margin: 8px 0;
 	}
 	h3{
-		margin-bottom: 8px;
+		margin: 8px 0;
 	}
 	h4{
-		margin-bottom: 8px;
+		margin: 8px 0;
 	}
 	h5{
-		margin-bottom: 8px;
+		margin: 8px 0;
 	}
 	h6{
-		margin-bottom: 8px;
+		margin: 8px 0;
 	}
 	p{
 		margin-bottom: 8px;
